nikon_microscope/PI_GCS2_DLL.h

/////////////////////////////////////////////////////////////////////////////
// Sensor-Channel commands.
BOOL PI_FUNC_DECL PI_qTAD(int ID, const int* piSensorsChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTNS(int ID, const int* piSensorsChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTSP(int ID, const int* piSensorsChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_SCN(int ID, const int* piSensorsChannelsArray, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qSCN(int ID, const int* piSensorsChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTSC(int ID, int* piNumberOfSensorChannels);
/////////////////////////////////////////////////////////////////////////////
// PIEZOWALK(R)-Channel commands.
BOOL PI_FUNC_DECL PI_APG(int ID, const int* piPIEZOWALKChannelsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qAPG(int ID, const int* piPIEZOWALKChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OAC(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOAC(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OAD(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOAD(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_ODC(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qODC(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OCD(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOCD(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OSM(int ID, const int* piPIEZOWALKChannelsArray, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOSM(int ID, const int* piPIEZOWALKChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OVL(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOVL(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOSN(int ID, const int* piPIEZOWALKChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_SSA(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qSSA(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_RNP(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_PGS(int ID, const int* piPIEZOWALKChannelsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTAC(int ID, int* pnNrChannels);
BOOL PI_FUNC_DECL PI_qTAV(int ID, const int* piChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OMA(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qOMA(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_OMR(int ID, const char* szAxes, const double* pdValueArray);
/////////////////////////////////////////////////////////////////////////////
// Joystick
BOOL PI_FUNC_DECL PI_qJAS(int ID, const int* iJoystickIDsArray, const int* iAxesIDsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JAX(int ID,  int iJoystickID,  int iAxesID, const char* szAxesBuffer);
BOOL PI_FUNC_DECL PI_qJAX(int ID, const int* iJoystickIDsArray, const int* iAxesIDsArray, int iArraySize, char* szAxesBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qJBS(int ID, const int* iJoystickIDsArray, const int* iButtonIDsArray, BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JDT(int ID, const int* iJoystickIDsArray, const int* iAxisIDsArray,const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JLT(int ID, int iJoystickID, int iAxisID, int iStartAdress, const double* pdValueArray,int iArraySize);
BOOL PI_FUNC_DECL PI_qJLT(int ID, const int* iJoystickIDsArray, const int* iAxisIDsArray,  int iNumberOfTables,  int iOffsetOfFirstPointInTable,  int iNumberOfValues, double** pdValueArray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_JON(int ID, const int* iJoystickIDsArray, const BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qJON(int ID, const int* iJoystickIDsArray, BOOL* pbValueArray, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// fast scan commands
BOOL PI_FUNC_DECL PI_AAP(int ID, const char* szAxis1, double dLength1, const char* szAxis2, double dLength2, double dAlignStep, int iNrRepeatedPositions, int iAnalogInput);
BOOL PI_FUNC_DECL PI_FIO(int ID, const char* szAxis1, double dLength1, const char* szAxis2, double dLength2, double dThreshold, double dLinearStep, double dAngleScan, int iAnalogInput);
BOOL PI_FUNC_DECL PI_FLM(int ID, const char* szAxis, double dLength, double dThreshold, int iAnalogInput, int iDirection);
BOOL PI_FUNC_DECL PI_FLS(int ID, const char* szAxis, double dLength, double dThreshold, int iAnalogInput, int iDirection);
BOOL PI_FUNC_DECL PI_FSA(int ID, const char* szAxis1, double dLength1, const char* szAxis2, double dLength2, double dThreshold, double dDistance, double dAlignStep, int iAnalogInput);
BOOL PI_FUNC_DECL PI_FSC(int ID, const char* szAxis1, double dLength1, const char* szAxis2, double dLength2, double dThreshold, double dDistance, int iAnalogInput);
BOOL PI_FUNC_DECL PI_FSM(int ID, const char* szAxis1, double dLength1, const char* szAxis2, double dLength2, double dThreshold, double dDistance, int iAnalogInput);
BOOL PI_FUNC_DECL PI_qFSS(int ID, int* piResult);
BOOL PI_FUNC_DECL PI_FGC(int ID, const char* szProcessIds, const double* pdScanAxisCenterValueArray, const double* pdStepAxisCenterValueArray);
BOOL PI_FUNC_DECL PI_qFGC(int ID, const char* szProcessIds, double* pdScanAxisCenterValueArray, double* pdStepAxisCenterValueArray);
BOOL PI_FUNC_DECL PI_FRC(int ID, const char* szProcessIdBase, const char* szProcessIdsCoupled);
BOOL PI_FUNC_DECL PI_qFRC(int ID, const char* szProcessIdsBase, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qTCI(int ID, const int* piFastAlignmentInputIdsArray, double* pdCalculatedInputValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_SIC(int ID, int iFastAlignmentInputId, int iCalcType, const double* pdParameters, int iNumberOfParameters);
BOOL PI_FUNC_DECL PI_qSIC(int ID, const int* piFastAlignmentInputIdsArray, int iNumberOfInputIds, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_FDR(int ID, const char* szScanRoutineName, const char* szScanAxis, const double dScanAxisRange, const char* szStepAxis, const double dStepAxisRange, const char* szParameters);
BOOL PI_FUNC_DECL PI_FDG(int ID, const char* szScanRoutineName, const char* szScanAxis, const char* szStepAxis, const char* szParameters);
BOOL PI_FUNC_DECL PI_FRS(int ID, const char* szScanRoutineNames);
BOOL PI_FUNC_DECL PI_FRP(int ID, const char* szScanRoutineNames, const int* piOptionsArray);
BOOL PI_FUNC_DECL PI_qFRP(int ID, const char* szScanRoutineNames, int* piOptionsArray);
BOOL PI_FUNC_DECL PI_qFRR(int ID, const char* szScanRoutineNames, int iResultId, char* szResult, int iBufferSize);
BOOL PI_FUNC_DECL PI_qFRRArray(int ID, const char* szScanRoutineNames, const int* iResultIds, char* szResult, int iBufferSize);
BOOL PI_FUNC_DECL PI_qFRH(int ID, char* szBuffer, int iBufferSize);