nikon_microscope/PI_GCS2_DLL.bas


'/////////////////////////////////////////////////////////////////////////////
'// Sensor-Channel commands.
Public Declare Function PI_qTAD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piSensorsChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTNS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piSensorsChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTSP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piSensorsChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_SCN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piSensorsChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qSCN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piSensorsChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTSC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piNumberOfSensorChannels As Long) As Long


'/////////////////////////////////////////////////////////////////////////////
'// PIEZOWALK(R)-Channel commands.
Public Declare Function PI_APG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef iArraySize As Long) As Long
Public Declare Function PI_qAPG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_OAC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOAC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_OAD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOAD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_ODC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qODC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_OCD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOCD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_OSM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOSM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_OVL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOVL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qOSN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_SSA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qSSA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_RNP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_PGS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPIEZOWALKChannelsArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTAC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef pnNrChannels As Long) As Long
Public Declare Function PI_qTAV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_OMA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qOMA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_OMR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

'/////////////////////////////////////////////////////////////////////////////
'// Joystick
Public Declare Function PI_qJAS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef iAxesIDsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_JAX Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iJoystickID As Long, ByVal iAxesID As Long, ByVal szAxesBuffer As String) As Long
Public Declare Function PI_qJAX Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef iAxesIDsArray As Long, ByVal iArraySize As Long, ByVal szAxesBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qJBS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef iButtonIDsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_JDT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef iAxisIDsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_JLT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iJoystickID As Long, ByVal iAxisID As Long, ByVal iStartAdress As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qJLT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef iAxisIDsArray As Long, ByVal iNumberOfTables As Long, ByVal iOffsetOfFirstPoIntegerIntegerable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long
Public Declare Function PI_JON Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qJON Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iJoystickIDsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long


'/////////////////////////////////////////////////////////////////////////////
'// fast scan commands
Public Declare Function PI_AAP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes1 As String, ByVal dLength1 As Double, ByVal szAxis2 As String, ByVal dLength2 As Double, ByVal dAlignStep As Double, ByVal iNrRepeatedPositions As Long, ByVal iAnalogInput As Long) As Long
Public Declare Function PI_FIO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis1 As String, ByVal dLength1 As Double, ByVal szAxis2 As String, ByVal dLength2 As Double, ByVal dThreshold As Double, ByVal dLinearStep As Double, ByVal dAngleScan As Double, ByVal iAnalogInput As Long) As Long
Public Declare Function PI_FLM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis As String, ByVal dLength As Double, ByVal dThreshold As Double, ByVal iAnalogInput As Long, ByVal iDirection As Long) As Long
Public Declare Function PI_FLS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis As String, ByVal dLength As Double, ByVal dThreshold As Double, ByVal iAnalogInput As Long, ByVal iDirection As Long) As Long
Public Declare Function PI_FSA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis1 As String, ByVal dLength1 As Double, ByVal szAxis2 As String, ByVal dLength2 As Double, ByVal dThreshold As Double, ByVal dDistance As Double, ByVal dAlignStep As Double, ByVal iAnalogInput As Long) As Long
Public Declare Function PI_FSC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis1 As String, ByVal dLength1 As Double, ByVal szAxis2 As String, ByVal dLength2 As Double, ByVal dThreshold As Double, ByVal dDistance As Double, ByVal iAnalogInput As Long) As Long
Public Declare Function PI_FSM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis1 As String, ByVal dLength1 As Double, ByVal szAxis2 As String, ByVal dLength2 As Double, ByVal dThreshold As Double, ByVal dDistance As Double, ByVal iAnalogInput As Long) As Long
Public Declare Function PI_qFSS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piResult As Long) As Long

Public Declare Function PI_FGC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szProcessIds As String, ByRef pdScanAxisCenterValueArray As Double, ByRef pdStepAxisCenterValueArray As Double) As Long
Public Declare Function PI_qFGC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szProcessIds As String, ByRef pdScanAxisCenterValueArray As Double, ByRef pdStepAxisCenterValueArray As Double) As Long
Public Declare Function PI_FRC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szProcessIdBase As String, ByVal szProcessIdsCoupled As String) As Long
Public Declare Function PI_qFRC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szProcessIdsBase As String, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qTCI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piFastAlignmentInputIdsArray As Long, ByRef pdCalculatedInputValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_SIC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iFastAlignmentInputId As Long, ByVal iCalcType As Long, ByRef pdParameters As Double, ByVal iNumberOfParameters As Long) As Long
Public Declare Function PI_qSIC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piFastAlignmentInputIdsArray As Long, ByVal iNumberOfInputIds As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_FDR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineName As String, ByVal szScanAxis As String, ByVal dScanAxisRange As Double, ByVal szStepAxis As String, ByVal dStepAxisRange As Double, ByVal szParameters As String) As Long
Public Declare Function PI_FDG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineName As String, ByVal szScanAxis As String, ByVal szStepAxis As String, ByVal szParameters As String) As Long
Public Declare Function PI_FRS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineNames As String) As Long
Public Declare Function PI_FRP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineNames As String, ByRef piOptionsArray As Long) As Long
Public Declare Function PI_qFRP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineNames As String, ByRef piOptionsArray As Long) As Long
Public Declare Function PI_qFRR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineNames As String, ByVal iResultId As Long, ByVal szResult As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qFRRArray Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szScanRoutineNames As String, ByRef iResultIds As Long, ByVal szResult As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qFRH Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, BayVal szBuffer As String, ByVal iBufferSize As Long) As Long
